2024-09-29T00:40:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11088248029 # 556
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
* notice: last 14d: unq all: 27 62
* notice: prev accum: outdated-unq outdated-all / unq all: 811 4558 / 838 4620
* notice: next accum: outdated-unq outdated-all / unq all: 812 4559 / 839 4621
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-14] / [2024-09-28]

2024-09-28T00:36:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11079526644 # 554
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-28
* notice: last 14d: unq all: 27 62
* notice: prev accum: outdated-unq outdated-all / unq all: 811 4558 / 835 4611
* notice: next accum: outdated-unq outdated-all / unq all: 811 4558 / 838 4620
* notice: prev exec diff / last date diff / accum: unq all: +3 +9 -0 -0 / +3 +9 -0 -0 / 3 9
* notice: removed / changed dates: [] / [2024-09-27]

2024-09-27T12:13:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11070400841 # 553
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-27
* notice: last 14d: unq all: 24 53
* notice: prev accum: outdated-unq outdated-all / unq all: 810 4557 / 835 4611
* notice: next accum: outdated-unq outdated-all / unq all: 811 4558 / 835 4611
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-13] / []

2024-09-27T00:36:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11062418986 # 552