@@ -1,6 +1,6 @@
 {
-  "count": 62,
-  "uniques": 27,
+  "count": 63,
+  "uniques": 28,
   "views": [
     {
       "timestamp": "2024-09-16T00:00:00Z",
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2024-09-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
