@@ -1,3 +1,12 @@
+2024-09-29T12:12:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11092531375 # 557
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
+* notice: last 14d: unq all: 28 63
+* notice: prev accum: outdated-unq outdated-all / unq all: 812 4559 / 839 4621
+* notice: next accum: outdated-unq outdated-all / unq all: 812 4559 / 840 4622
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-29]
+
 2024-09-29T00:40:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11088248029 # 556
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
